@@ -1,8 +1,12 @@
 package ch.admin.bag.covidcertificate.gateway.service;
 
 import ch.admin.bag.covidcertificate.gateway.client.IdentityAuthorizationClient;
+import ch.admin.bag.covidcertificate.gateway.client.internal.FunctionAuthorizationClient;
+import ch.admin.bag.covidcertificate.gateway.error.RestError;
+import ch.admin.bag.covidcertificate.gateway.features.authorization.model.Function;
 import ch.admin.bag.covidcertificate.gateway.service.dto.incoming.DtoWithAuthorization;
 import ch.admin.bag.covidcertificate.gateway.service.dto.incoming.IdentityDto;
+import ch.admin.bag.covidcertificate.gateway.service.model.UserAuthorizationData;
 import ch.admin.bag.covidcertificate.gateway.web.config.CustomHeaderAuthenticationToken;
 import com.flextrade.jfixture.JFixture;
 import org.junit.jupiter.api.BeforeEach;
@@ -11,12 +15,18 @@ import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.test.util.ReflectionTestUtils;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
-import static ch.admin.bag.covidcertificate.gateway.error.ErrorList.*;
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 class AuthorizationServiceTest {
 
@@ -24,18 +34,21 @@ class AuthorizationServiceTest {
 
     BearerTokenValidationService bearerTokenValidationService;
     IdentityAuthorizationClient identityAuthorizationClient;
+    FunctionAuthorizationClient functionAuthorizationClient;
 
     DtoWithAuthorization dtoWithAuthorization;
     AuthorizationService authorizationService;
-    List<String> allowedCommonNames = Arrays.asList("test-cn");
+    List<String> allowedCommonNames = List.of("test-cn");
     String ipAddress;
 
     @BeforeEach
     void initialize() {
         this.bearerTokenValidationService = mock(BearerTokenValidationService.class);
         this.identityAuthorizationClient = mock(IdentityAuthorizationClient.class);
+        this.functionAuthorizationClient = mock(FunctionAuthorizationClient.class);
         this.dtoWithAuthorization = this.getDtoWithAuthorization(false, false);
-        this.authorizationService = new AuthorizationService(bearerTokenValidationService, identityAuthorizationClient);
+
+        this.authorizationService = new AuthorizationService(bearerTokenValidationService, identityAuthorizationClient, functionAuthorizationClient);
         this.ipAddress = fixure.create(String.class);
     }
 
@@ -44,8 +57,15 @@ class AuthorizationServiceTest {
         ReflectionTestUtils.setField(authorizationService, "allowedCommonNamesForIdentity", allowedCommonNames);
         this.setCnNameInContext("test-cn");
 
-        var uuid = assertDoesNotThrow(() -> authorizationService.validateAndGetId(dtoWithAuthorization, ipAddress));
-        verify(identityAuthorizationClient, times(1)).authorize(dtoWithAuthorization.getIdentity().getUuid(), dtoWithAuthorization.getIdentity().getIdpSource());
+        this.dtoWithAuthorization = this.getDtoWithAuthorization(false, true);
+        UserAuthorizationData userAuthorizationData = new UserAuthorizationData(dtoWithAuthorization.getIdentity().getUuid(), dtoWithAuthorization.getIdentity().getIdpSource(), Collections.emptyList());
+
+        when(identityAuthorizationClient.fetchUserAndGetAuthData(any(String.class), any(String.class)))
+                .thenReturn(userAuthorizationData);
+
+
+        var uuid = assertDoesNotThrow(() -> authorizationService.validateAndGetId(dtoWithAuthorization, ipAddress, Function.CREATE_VACCINE_CERTIFICATE));
+        verify(identityAuthorizationClient, times(1)).fetchUserAndGetAuthData(dtoWithAuthorization.getIdentity().getUuid(), dtoWithAuthorization.getIdentity().getIdpSource());
         assertEquals(dtoWithAuthorization.getIdentity().getUuid(), uuid);
     }
 
@@ -54,8 +74,11 @@ class AuthorizationServiceTest {
         ReflectionTestUtils.setField(authorizationService, "allowedCommonNamesForIdentity", allowedCommonNames);
         this.setCnNameInContext("not-in-allowed");
 
-        assertDoesNotThrow(() -> authorizationService.validateAndGetId(dtoWithAuthorization, ipAddress));
-        verify(bearerTokenValidationService, times(1)).validate(this.dtoWithAuthorization.getOtp(), ipAddress);
+        when(bearerTokenValidationService.validateOtpAndGetAuthData(any(String.class), any(String.class)))
+                .thenReturn(new UserAuthorizationData("dsd", "sdsd", Collections.emptyList()));
+
+        assertDoesNotThrow(() -> authorizationService.validateAndGetId(dtoWithAuthorization, ipAddress, Function.CREATE_VACCINE_CERTIFICATE));
+        verify(bearerTokenValidationService, times(1)).validateOtpAndGetAuthData(this.dtoWithAuthorization.getOtp(), ipAddress);
     }
 
     @Test
@@ -65,9 +88,12 @@ class AuthorizationServiceTest {
 
         var otherDtoWithAuth = this.getDtoWithAuthorization(true, false);
 
-        assertDoesNotThrow(() -> authorizationService.validateAndGetId(otherDtoWithAuth, ipAddress));
-        verify(identityAuthorizationClient, never()).authorize(any(), any());
-        verify(bearerTokenValidationService, never()).validate(this.dtoWithAuthorization.getOtp(), ipAddress);
+        when(bearerTokenValidationService.validateOtpAndGetAuthData(any(String.class), any(String.class)))
+                .thenReturn(new UserAuthorizationData("dsdsd", "dsd", Collections.emptyList()));
+
+        assertDoesNotThrow(() -> authorizationService.validateAndGetId(otherDtoWithAuth, ipAddress, Function.CREATE_VACCINE_CERTIFICATE));
+        verify(identityAuthorizationClient, never()).fetchUserAndGetAuthData(any(), any());
+        verify(bearerTokenValidationService, never()).validateOtpAndGetAuthData(this.dtoWithAuthorization.getOtp(), ipAddress);
     }
 
     private void setCnNameInContext(String cnValue) {
